; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/ai03/orbit/extr_orbit.c_led_set_kb.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/ai03/orbit/extr_orbit.c_led_set_kb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8*, i8*, i8* }

@USB_LED_NUM_LOCK = common dso_local global i32 0, align 4
@serial_m2s_buffer = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@USB_LED_CAPS_LOCK = common dso_local global i32 0, align 4
@USB_LED_SCROLL_LOCK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @led_set_kb(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = call i64 (...) @is_keyboard_master()
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %27

5:                                                ; preds = %1
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @USB_LED_NUM_LOCK, align 4
  %8 = call i8* @IS_LED_ON(i32 %6, i32 %7)
  store i8* %8, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @serial_m2s_buffer, i32 0, i32 2), align 8
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* @USB_LED_CAPS_LOCK, align 4
  %11 = call i8* @IS_LED_ON(i32 %9, i32 %10)
  store i8* %11, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @serial_m2s_buffer, i32 0, i32 1), align 8
  %12 = load i32, i32* %2, align 4
  %13 = load i32, i32* @USB_LED_SCROLL_LOCK, align 4
  %14 = call i8* @IS_LED_ON(i32 %12, i32 %13)
  store i8* %14, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @serial_m2s_buffer, i32 0, i32 0), align 8
  %15 = load i32, i32* %2, align 4
  %16 = load i32, i32* @USB_LED_NUM_LOCK, align 4
  %17 = call i8* @IS_LED_ON(i32 %15, i32 %16)
  %18 = call i32 @led_toggle(i32 3, i8* %17)
  %19 = load i32, i32* %2, align 4
  %20 = load i32, i32* @USB_LED_CAPS_LOCK, align 4
  %21 = call i8* @IS_LED_ON(i32 %19, i32 %20)
  %22 = call i32 @led_toggle(i32 4, i8* %21)
  %23 = load i32, i32* %2, align 4
  %24 = load i32, i32* @USB_LED_SCROLL_LOCK, align 4
  %25 = call i8* @IS_LED_ON(i32 %23, i32 %24)
  %26 = call i32 @led_toggle(i32 5, i8* %25)
  br label %27

27:                                               ; preds = %5, %1
  %28 = load i32, i32* %2, align 4
  %29 = call i32 @led_set_user(i32 %28)
  ret void
}

declare dso_local i64 @is_keyboard_master(...) #1

declare dso_local i8* @IS_LED_ON(i32, i32) #1

declare dso_local i32 @led_toggle(i32, i8*) #1

declare dso_local i32 @led_set_user(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
